--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Player</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/8ff61e4c95.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,10 +18,10 @@
                 <div id="meanu"><i class="fa-solid fa-bars"></i></div>
             </nav>
 
-            <img src="/images.jpg">
+            <img src="images.jpg">
             <h3>Winning Speech | Karan Aujla</h3>
             <audio  id="song">
-                <source src="/Winning Speech_320(PagalWorld.com.sb).mp3">
+                <source src="Winning Speech_320(PagalWorld.com.sb).mp3">
             </audio>
             <input type="range" value="0" id="range">
 
